--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ main {
                     <span class="material-icons text-[#f2d00d] text-4xl animate-bounce">vpn_key</span>
                 </div>
             </div>
-            <span class="mt-4 text-[#f2d00d] font-bold">منهج تجريبي</span>
+            <span class="mt-4 text-[#f2d00d] font-bold">المنهج الوصفي</span>
         </div>
 
         <div class="node node-down node relative z-10 flex flex-col items-center group">
@@ -160,14 +160,14 @@ main {
                     <span class="material-icons text-[#f2d00d] text-4xl animate-bounce">vpn_key</span>
                 </div>
             </div>
-            <span class="mt-4 text-[#f2d00d] font-bold">منهج وصفي</span>
+            <span class="mt-4 text-[#f2d00d] font-bold">المنهج التجريبي</span>
         </div>
 
         <div id="treasure-chest" class="node relative z-10 flex flex-col items-center">
             <div class="w-32 h-24 md:w-44 md:h-32 bg-[#3a2a10] border-t-8 border-[#f2d00d] rounded-t-2xl shadow-2xl flex items-center justify-center relative overflow-hidden">
                 <span id="lock-icon" class="material-icons text-[#f2d00d] text-5xl">lock</span>
             </div>
-            <span class="mt-4 text-[#f2d00d] font-bold tracking-widest uppercase">الكنز</span>
+            <span class="mt-4 text-[#f2d00d] font-bold tracking-widest uppercase">صندوق الكنز</span>
         </div>
 
     </div>
