--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ main {
         overlay.style.opacity = '0';
         element.style.pointerEvents = 'none';
 
-        new Audio("https://www.soundjay.com/buttons_c2026/sounds/button-09a.mp3").play();
+        new Audio("https://drive.google.com/uc?export=download&id=1eNTrQODnCb-f6Bf8m1dTD-HAvvEqOMA-").play();
         
         collectedCount++;
         updateUI();
